maze.lessons.maze.island.IslandMaze.scala.error
Escaper:39: error: not found: value f
      f(!estFaceMur){
      ^